# goto_turtlesim_server

./: LICENSE  README.md
final_project/: README.md
final_project/ros2-project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
final_project/ros2-project/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
final_project/ros2-project/install/two_server_controllers/lib/two_server_controllers/: go_to_goal  the_client
final_project/ros2-project/install/two_server_controllers/share/two_server_controllers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
final_project/ros2-project/log/: latest_build
final_project/ros2-project/src/custom_interfaces/: CMakeLists.txt
final_project/ros2-project/src/two_server_controllers/: CMakeLists.txt
final_project/ros2-project/src/two_server_controllers/src/: goto_server.cpp  the_client.cpp
packages_lectures/ros2_ws/install/: local_setup.sh  setup.sh
packages_lectures/ros2_ws/log/: latest_build
packages_lectures/ros2_ws/src/add_two_nums/: CMakeLists.txt
packages_lectures/ros2_ws/src/nav2_test/: mapping_params.yaml
packages_lectures/ros2_ws/src/nav2_test/maps/: map.pgm
packages_lectures/ros2_ws/src/publish_and_subscribe/: CMakeLists.txt
packages_lectures/turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
packages_lectures/turtlebot3_ws/log/: latest_build
packages_lectures/turtlebot3_ws/src/robot_controller/: CMakeLists.txt
packages_lectures/turtlebot3_ws/src/robot_controller/src/: publisher_cmd.cpp  random.cpp  subscriber_odom.cpp
slides_and_lectures/markdown/: Lecture_2.md  Lecture_3.md  Lecture_4.md  Lecture_5.md
slides_and_lectures/sdfs/: car.sdf  edited_car.sdf  nao2.sdf
(+79 files in other folders)
